<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.whereareiam</groupId>
    <artifactId>Socialismus</artifactId>
    <version>1.1.0</version>
    <packaging>pom</packaging>

    <properties>
        <!-- Project config -->
        <testDir>/Users/whereareiam/Projects/Test/plugins</testDir>

        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <minecraft.version>1.20.2</minecraft.version>

        <!-- Maven version -->
        <maven.compiler.version>3.12.1</maven.compiler.version>
        <maven.shade.version>3.5.1</maven.shade.version>
        <maven.assembly.version>3.3.0</maven.assembly.version>
        <maven.antrun.version>3.1.0</maven.antrun.version>
        <maven.resources.version>3.3.1</maven.resources.version>

        <!-- Dependencies -->
        <!-- core -->
        <guice.version>7.0.0</guice.version>
        <serializer.version>1.1.1</serializer.version>
        <acf-paper.version>0.5.1</acf-paper.version>
        <sqlite-jdbc.version>3.44.1.0</sqlite-jdbc.version>

        <bstats-bukkit.version>3.0.2</bstats-bukkit.version>
        <adventure-platform-bukkit.version>4.3.2</adventure-platform-bukkit.version>
        <adventure-text-serializer-plain.version>4.14.0</adventure-text-serializer-plain.version>
        <adventure-text-minimessage.version>4.15.0</adventure-text-minimessage.version>

        <placeholderapi.version>2.11.4</placeholderapi.version>
        <protocollib.version>5.1.0</protocollib.version>
    </properties>

    <profiles>
        <profile>
            <id>paper-dev</id>
            <modules>
                <module>core</module>
                <module>paper</module>
            </modules>
        </profile>
        <profile>
            <id>spigot-dev</id>
            <modules>
                <module>core</module>
                <module>spigot</module>
            </modules>
        </profile>
        <profile>
            <id>dev</id>
            <modules>
                <module>core</module>
                <module>spigot</module>
                <module>paper</module>
            </modules>
        </profile>
        <profile>
            <id>release</id>
            <modules>
                <module>core</module>
                <module>spigot</module>
                <module>paper</module>
            </modules>
        </profile>
    </profiles>

    <repositories>
        <!-- Spigot -->
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- Paper -->
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <!-- ACF -->
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <!-- placeholderapi -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <!-- ProtocolLib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guice.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.elytrium</groupId>
            <artifactId>serializer</artifactId>
            <version>${serializer.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
